--- a/login-reg-design/login.css
+++ b/login-reg-design/login.css
@@ -18,3 +18,56 @@ body{
     height: 100vh;
     display: flex;
 }
+
+.text,
+.box{
+    margin-top: 45vh;
+}
+
+.text{
+    margin-left: 10%;
+    font-weight: 300px;
+}
+.box{
+    margin-left: 25%;
+}
+
+.text h1{
+    font-size: 70px;
+    color: #ffffff;
+    font-weight: 500;
+}
+
+.text p{
+    font-size: 20px;
+    color: #ffffff;
+    font-weight: 300;
+}
+.text p a{
+    color: #ffffff;
+    font-weight: 700;
+}
+
+.form{
+    background: transparent;
+    color: #ffffff;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+}
+
+input{
+    margin: 20px 0;
+    padding: 10px;
+    background: transparent;
+    border: none;
+    outline: none;
+    color: white;
+    font-family: 'Raleway', sans-serif;
+}
+
+.email,
+.password{
+    border-bottom: 1px solid white;
+}
