--- a/login-reg-design/boss.css
+++ b/login-reg-design/boss.css
@@ -91,3 +91,84 @@ button:hover{
 .hit{
     color: gray;
 }
+
+#modalContainer {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+.modal-content {
+    text-align: center;
+    background-color: #242424;
+    margin: 10% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 70%;
+}
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+h1{
+    margin-top: 20px;
+    text-align: center;
+    margin-bottom: 10px;
+    font-weight: 600;
+}
+hr{
+    background-color: gainsboro;
+    margin-bottom: 40px;
+}
+[type=radio] { 
+    position: absolute;
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+/* IMAGE STYLES */
+[type=radio] + img {
+    cursor: pointer;
+    filter: grayscale(100%);
+    transition: .5s;
+}
+  /* CHECKED STYLES */
+[type=radio] + img:hover {
+    filter: grayscale(0);
+}
+[type=radio]:checked + img {
+    filter: grayscale(0);
+}
+img{
+    height: 90px;
+    width: 90px;
+}
+label{
+    transition: .5s;
+    color: gray;
+}
+label:hover{
+    color: white;
+}
+.col-sm{
+    text-align: center;
+}
+.center{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+form button{
+    margin-top: 30px;
+}
