--- a/login-reg-design/stats.css
+++ b/login-reg-design/stats.css
@@ -21,6 +21,9 @@ header{
     align-items: center;
     padding: 30px 10%;
 }
+body{
+    color: white;
+}
 .nav_links{
     list-style: none;
 }
@@ -57,4 +60,120 @@ button:hover{
 .select:hover{
     background-color: rgb(135, 28, 211, 1);
     color: white;
+}
+/* nav bar end */
+/* player Info start */
+.the-player{
+    font-family: 'Raleway', sans-serif;
+    background-color: #555555;
+    width: 1250px;
+    margin-left: auto;
+    margin-right: auto;
+}
+/* left box start*/
+.status {
+    float: left;
+    height: 800px;
+    width: 50%;
+}
+.user-stats{
+    margin-top: 20px;
+    height: 120px;
+}
+.user-stats label{
+    float: left;
+    font-size:23px;
+    margin-top: 20px;
+    margin-left: 10px;
+}
+
+.user-stats input {
+    float: right;
+	background-color: #eee;
+    border: none;
+	padding: 12px 15px;
+    margin: 8px 0;
+    margin-right: 20px;
+	width: 70%;
+}
+/* weapons box start */
+.picked-gear{
+    width: 100%;
+    height: 350px;
+}
+.main-img{
+    justify-content: center;
+    text-align: center;
+}
+.picked-gear img{
+    height: 200px;
+    width: 200px;
+}
+/* weapons box end */
+
+.gear [type=radio] { 
+    position: absolute;
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+/* IMAGE STYLES */
+.gear [type=radio] + img {
+    cursor: pointer;
+    filter: grayscale(100%);
+    transition: .5s;
+}
+  /* CHECKED STYLES */
+.gear [type=radio] + img:hover {
+    filter: grayscale(0);
+}
+.gear [type=radio]:checked + img {
+    filter: grayscale(0);
+}
+.gear img{
+    height: 100px;
+    width: 100px;
+}
+.gear .col-sm{
+    text-align: center;
+}
+.gear .center{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+.gear label{
+    transition: .5s;
+    color: gray;
+}
+.gear label:hover{
+    color: white;
+}
+/* left box end*/
+/* right box start*/
+.profile {
+    background-color: #4e4343;
+    float: right;
+    height: 800px;
+    width: 50%;
+}
+.user-img{
+    text-align: center;
+}
+.user-img img{
+    height: 500px;
+    width: 250px;
+}
+.user-img h1,
+.user-img p,
+.user-img h3{
+    font-family: 'Raleway', sans-serif;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+.stats{
+    margin-top: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
