--- a/donta_rpg/main/templates/shop.html
+++ b/donta_rpg/main/templates/shop.html
@@ -34,7 +34,7 @@
     <div class="market">
         <div class="profile">
             <div class="user-img">
-                <img src="../static/Images/pngwing.com.png" alt="">
+                <img src="../static/Images/goku.png" alt="">
                 <h1>Goku</h1>
                 <p>Special Ability</p>
                 <h3>Ultra Instinct</h3>
