--- a/donta_rpg/main/templates/stats.html
+++ b/donta_rpg/main/templates/stats.html
@@ -61,7 +61,7 @@
                         <div class="row ">
                             <label class="col-sm">
                                 <input type="radio" name="test" value="small" checked>
-                                <img src="../static/Images/pacman.gif" alt="">
+                                <img src="../static/Images/scythe.png" alt="">
                                 <p>Weapon</p>
                             </label>
                             <label class="col-sm">
@@ -71,7 +71,7 @@
                             </label>
                             <label class="col-sm">
                                 <input type="radio" name="test" value="big">
-                                <img src="../static/Images/pacman.gif" alt="">
+                                <img src="../static/Images/scythe.png" alt="">
                                 <p>Weapon</p>
                             </label>
                             <label class="col-sm">
@@ -88,7 +88,7 @@
                             </label>
                             <label class="col-sm">
                                 <input type="radio" name="test" value="big">
-                                <img src="../static/Images/pacman.gif" alt="">
+                                <img src="../static/Images/scythe.png" alt="">
                                 <p>Weapon</p>
                             </label>
                             <label class="col-sm">
@@ -98,7 +98,7 @@
                             </label>
                             <label class="col-sm">
                                 <input type="radio" name="test" value="big">
-                                <img src="../static/Images/pacman.gif" alt="">
+                                <img src="../static/Images/scythe.png" alt="">
                                 <p>Weapon</p>
                             </label>
                         </div>
@@ -108,7 +108,7 @@
             <!-- Profile box -->
             <div class="profile">
                 <div class="user-img">
-                    <img src="../static/Images/user_sprite/donta_right_stand.png" alt="">
+                    <img src="../static/Images/goku.png" alt="">
                     <h1>Goku</h1>
                     <p>Special Ability</p>
                     <h3>Ultra Instinct</h3>
